apps/outline/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  namespace: outline
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`outline.local.cvsickle.com`)
      kind: Rule
      services:
        - name: outline
          port: 3000
          sticky:
            cookie:
              name: outline_affinity
              httpOnly: true
              secure: true
    - match: Host(`wiki.cvsickle.com`)
      kind: Rule
      services:
        - name: outline
          port: 3000
          sticky:
            cookie:
              name: outline_affinity_external
              httpOnly: true
              secure: true
